package role.base;

import game.logic.GameAction;

public interface PreRoundActable {

	public abstract void preRoundActs(GameAction action);

}
