package role.base;

import game.logic.GameAction;

public interface PreTurnActable {

	public abstract void preTurnActs(GameAction action);

}
